--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,3 +12,7 @@
 
 </body>
 </html>
+
+<!-- Per Command Prompt set-up instructions -->
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
