--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,12 +47,12 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <% if current_user.username != nil %>
+          <% if current_user != nil %>
           <li><a href="/users/edit"><%= current_user.username.camelize %></a></li>
           <% else %>
-          <li><a href="/users/sign_in">Sign In</a></li>
+          <li><a href="/">Sign In</a></li>
           <% end %>
-          <% if current_user.username != nil %>
+          <% if current_user != nil %>
           <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
           <% else %>
           <li><a href="/users/sign_up">Sign Up</a></li>
