End of Class 11.22
Rake grade mostly failing still - Prof. Bettina thinks it will be okay
once I get through more steps (e.g., step 3 in devise cheatsheet)

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -5,6 +5,26 @@
   </h1>
 </div>
 
+
+<% @photos.each do |photo| %>
+<div class="panel panel-default">
+  <div class="panel-heading"><%= User.find(photo.user_id).username %></div>
+  <div class="panel-body">
+    <!-- Panel content -->
+    <td><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></td>
+
+    <% if photo.likes.count > 1 %>
+    <td><%= User.find(photo.likes.pluck(:user_id)).collect { |u| "#{u[:username]}"}.to_sentence %> like this</td>
+    <% elsif photo.likes.count == 0 %>
+    <td> be the first to like this</td>
+    <% elsif photo.likes.count == 1 %>
+    <td><%= User.find(photo.likes.pluck(:user_id)).collect { |u| "#{u[:username]}"}.to_sentence %> likes this</td>
+<% end %>
+  </div>
+</div>
+<% end %>
+
+
 <div class="row">
   <div class="col-md-12">
     <table class="table table-striped table-hover">
