--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
           <li><a href="/users">All Users</a></li>
           <li><a href="/comments">Comments</a></li>
           <li><a href="/likes">Likes</a></li>
-          <li><a href="/photos">Photos</a></li>
+          <li><a href="/photos">All Posts</a></li>
           <% if current_user != nil %>
           <li><a href="/users/<%= current_user.id %>">My Wall</a></li>
           <% end %>
