--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -13,40 +13,42 @@
     <!-- Panel content -->
     <td><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></td>
 
-    <% if photo.likes.count > 1 %>
-    <td><%= User.find(photo.likes.pluck(:user_id)).collect { |u| "#{u[:username]}"}.to_sentence %> like this</td>
-    <% elsif photo.likes.count == 0 %>
-    <td> be the first to like this</td>
-    <% elsif photo.likes.count == 1 %>
-    <td><%= User.find(photo.likes.pluck(:user_id)).collect { |u| "#{u[:username]}"}.to_sentence %> likes this</td>
+    <% if  photo.fans.exists?(current_user.id) %>
+              <% @like = photo.likes.find_by(:user_id=>current_user.id, :photo_id=>photo.id) %>
+            <!-- # like button with usernames -->
+            <form action="/delete_like/<%= @like.id %>" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              <!-- Label and input for user_id -->
+              <input type="text" name="user_id" value="<%= current_user.id %>">
+              <!-- Label and input for photo_id -->
+              <input type="text" name="photo_id" value="<%= photo.id %>">
+
+              <button class="btn btn-link">
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </button> <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
+            </form>
+
+            <% else %>
+            <!-- # like button with usernames -->
+            <form action="/create_like" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              <!-- Label and input for user_id -->
+              <input type="text" name="user_id" value="<%= current_user.id %>">
+              <!-- Label and input for photo_id -->
+              <input type="text" name="photo_id" value="<%= photo.id %>">
+
+              <button class="btn btn-link">
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+              </button>
+              <% end %>
+              <% if photo.fans.empty? %>
+              <h5> be the first to like this</h5>
+              <% else %>
+              <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
+              <% end %>
+            </form>
 <% end %>
-  </div>
-</div>
-<% end %>
-
-
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Caption</th>
-        <th>Image</th>
-        <th>User</th>
-        <th>Actions</th>
-      </tr>
-
-      <% @photos.each do |photo| %>
-      <tr>
-        <td><%= photo.caption %></td>
-        <td><%= photo.image %></td>
-        <td><%= photo.user_id %></td>
-        <td>
-          <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
-          <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
   </div>
 </div>
