--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -50,5 +50,15 @@
               <% end %>
             </form>
 <% end %>
+
+<!-- Form for comments -->
+<form action="/create_comment" method="post">
+  <!-- Hidden input for authenticity token to protect from forgery -->
+  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+  <!-- Label and input for user_id -->
+  <input type="hidden" name="user_id" value="<%= current_user.id %>">
+  <!-- Label and input for comment -->
+  <input type="text" name="comment" value="Add a Comment...">
+
   </div>
 </div>
