--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -9,7 +9,7 @@
       <dd><%= @like.user_id %></dd>
 
       <dt>Photo</dt>
-      <dd><%= @like.photo_id %></dd>
+      <dd><img src="<%= @like.photo_id %>" class="img-responsive" alt="Responsive image"></dd>
 
     </dl>
 
