--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -49,7 +49,7 @@
               <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
               <% end %>
             </form>
-<% end %>
+
 
 <!-- Form for comments -->
 <form action="/create_comment" method="post">
@@ -58,7 +58,9 @@
   <!-- Label and input for user_id -->
   <input type="hidden" name="user_id" value="<%= current_user.id %>">
   <!-- Label and input for comment -->
-  <input type="text" name="comment" value="Add a Comment...">
+  <input type="text" name="comment" value="Add a Comment..."><%= "Time Ago" %>
+
+<% end %>
 
   </div>
 </div>
