--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1>
-    <%= User.find_by("id").username.camelize %>
+    <%= User.find_by("id").username %>
   </h1>
 </div>
 
@@ -9,7 +9,7 @@
 
       <% @photos.where(:user_id => @user.id).each do |post| %>
       <tr>
-        <td><%= post.image %></td>
+        <td><img src="<%= post.image %>" class="img-responsive" alt="Responsive image"></td>
         <td><%= post.caption %></td>
         <td><%= post.likes.count %></td>
         <td><%= post.comments %></td>
