--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,7 @@
   <!-- Added field for username -->
   <div class="field">
     <%= f.label :"Username" %><br />
-    <%= f.text_field :username, autofocus: true %>
+    <%= f.text_field :username, autofocus: true, text: "Username" %>
   </div>
 
   <div class="field">
