--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,12 +55,14 @@
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user != nil %>
-          <li><a href="/users/edit"><%= current_user.username %></a></li>
+          <li><a href="/users/edit"><i class="fa fa-fw fa-edit" aria-hidden="true">
+          </i><%= current_user.username %></a></li>
           <% else %>
           <li><a href="/">Sign In</a></li>
           <% end %>
           <% if current_user != nil %>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
+          <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="fa fa-fw fa-sign-out" aria-hidden="true">
+          </i>Sign Out</a></li>
           <% else %>
           <li><a href="/users/sign_up">Sign Up</a></li>
           <% end %>
