--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,65 +1,74 @@
-<div class="page-header">
-    <i class="fa fa-user-plus" aria-hidden="true">
-    <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
-  </i>
+<div class="container">
+  <div class="col-md-8 col-md-offset-2">
+  <div class="header">
+    <a href="/photos/new" class="btn btn-default btn-block"><i class="fa fa-plus" aria-hidden="true">
+    </i></a>
+    <hr>
+  </div>
+</div>
 </div>
 
+<div class="container">
+<div class="col-md-8 col-md-offset-2">
+  <% @photos.each do |photo| %>
+  <div class="panel panel-default">
+    <div class="panel-heading"><a href="/users/<%= photo.user_id %>"><%= User.find(photo.user_id).username %></a>
+      <%= "about " + time_ago_in_words(photo.updated_at) + " ago" %></div>
+      <div class="panel-body">
+        <!-- Panel content -->
+        <td><a href="/photos/<%= photo.id %>"><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></a></td>
 
-<% @photos.each do |photo| %>
-<div class="panel panel-default">
-  <div class="panel-heading"><%= User.find(photo.user_id).username %></div>
-  <div class="panel-body">
-    <!-- Panel content -->
-    <td><a href="/photos/<%= photo.id %>"><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></a></td>
+        <% if  photo.fans.exists?(current_user.id) %>
+        <% @like = photo.likes.find_by(:user_id=>current_user.id, :photo_id=>photo.id) %>
+        <!-- # like button with usernames -->
+        <form action="/delete_like/<%= photo.id %>" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+          <!-- Label and input for user_id -->
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
+          <!-- Label and input for photo_id -->
+          <input type="hidden" name="photo_id" value="<%= photo.id %>">
 
-    <% if  photo.fans.exists?(current_user.id) %>
-    <% @like = photo.likes.find_by(:user_id=>current_user.id, :photo_id=>photo.id) %>
-    <!-- # like button with usernames -->
-    <form action="/delete_like/<%= @like.id %>" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <!-- Label and input for user_id -->
-      <input type="text" name="user_id" value="<%= current_user.id %>">
-      <!-- Label and input for photo_id -->
-      <input type="text" name="photo_id" value="<%= photo.id %>">
+          <button class="btn btn-link">
+            <i class="fa fa-heart" aria-hidden="true"></i>
+          </button> <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
+        </form>
 
-      <button class="btn btn-link">
-        <i class="fa fa-heart" aria-hidden="true"></i>
-      </button> <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
-    </form>
+        <% else %>
+        <!-- # like button with usernames -->
+        <form action="/create_like/<%= photo.id %>" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+          <!-- Label and input for user_id -->
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
+          <!-- Label and input for photo_id -->
+          <input type="hidden" name="photo_id" value="<%= photo.id %>">
 
-    <% else %>
-    <!-- # like button with usernames -->
-    <form action="/create_like" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <!-- Label and input for user_id -->
-      <input type="text" name="user_id" value="<%= current_user.id %>">
-      <!-- Label and input for photo_id -->
-      <input type="text" name="photo_id" value="<%= photo.id %>">
-
-      <button class="btn btn-link">
-        <i class="fa fa-heart-o" aria-hidden="true"></i>
-      </button>
-      <% end %>
-      <% if photo.fans.empty? %>
-      <h5> be the first to like this</h5>
-      <% else %>
-      <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
-      <% end %>
-    </form>
+          <button class="btn btn-link">
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+          </button>
+          <% end %>
+          <% if photo.fans.empty? %>
+          <h5> be the first to like this</h5>
+          <% else %>
+          <h5> <%= photo.fans.pluck(:username).to_sentence %> like this</h5>
+          <% end %>
+        </form>
 
 
-    <!-- Form for comments -->
-    <form action="/create_comment" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <!-- Label and input for user_id -->
-      <input type="hidden" name="user_id" value="<%= current_user.id %>">
-      <!-- Label and input for comment -->
-      <input type="text" name="comment" value="Add a Comment..."><%= time_ago_in_words(Time.at((Time.now - photo.updated_at.to_datetime).to_r)) %>
+        <!-- Form for comments -->
+        <form action="/create_comment" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+          <!-- Label and input for user_id -->
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
+          <!-- Label and input for comment -->
+          <input type="text" name="comment" placeholder="Add a Comment..."><%= "about " + time_ago_in_words(photo.updated_at) + " ago" %>
+</div>
+</div>
+          <% end %>
 
-      <% end %>
+
 
     </div>
-  </div>
+</div>
