--- a/app/views/mylikes/show.html.erb
+++ b/app/views/mylikes/show.html.erb
@@ -29,6 +29,7 @@
 </ul>
     <td><%= Photo.find(mylike.photo_id).comments %></td>
     </tr>
+    <% else %>
     <% end %>
     <% end %>
   </table>
