--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
 
   <!-- Added field for username -->
   <div class="field">
-    <%= f.label :"Username" %><br />
+    <%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true, text: "Username" %>
   </div>
 
